--- a/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/cs.json
+++ b/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/cs.json
@@ -2,6 +2,13 @@
   "culture": "cs",
   "texts": {
     "Menu:BookManagement": "Správa knih",
-    "Menu:Books": "Knihy"
+    "Menu:Books": "Knihy",
+    "Menu:Customer": "MenuCustomer",
+    "Customer": "Customer",
+    "CustomerName": "CustomerName",
+    "CreateCustomer": "CreateCustomer",
+    "EditCustomer": "EditCustomer",
+    "CustomerDeletionConfirmationMessage": "Are you sure to delete the customer {0}?",
+    "SuccessfullyDeleted": "Successfully deleted"
   }
 }
