--- a/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/en.json
+++ b/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/en.json
@@ -2,6 +2,13 @@
   "culture": "en",
   "texts": {
     "Menu:BookManagement": "Book Management",
-    "Menu:Books": "Books"
+    "Menu:Books": "Books",
+    "Menu:Customer": "MenuCustomer",
+    "Customer": "Customer",
+    "CustomerName": "CustomerName",
+    "CreateCustomer": "CreateCustomer",
+    "EditCustomer": "EditCustomer",
+    "CustomerDeletionConfirmationMessage": "Are you sure to delete the customer {0}?",
+    "SuccessfullyDeleted": "Successfully deleted"
   }
 }
