--- a/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/pt-BR.json
+++ b/BookStore-Modular/modules/book-management/src/Acme.BookStore.BookManagement.Domain.Shared/Localization/BookManagement/pt-BR.json
@@ -1,6 +1,12 @@
 {
   "culture": "pt-BR",
   "texts": {
-
+    "Menu:Customer": "MenuCustomer",
+    "Customer": "Customer",
+    "CustomerName": "CustomerName",
+    "CreateCustomer": "CreateCustomer",
+    "EditCustomer": "EditCustomer",
+    "CustomerDeletionConfirmationMessage": "Are you sure to delete the customer {0}?",
+    "SuccessfullyDeleted": "Successfully deleted"
   }
 }
